Added lastest report

--- a/Report/project.tex
+++ b/Report/project.tex
@@ -9,6 +9,7 @@
 \usepackage{mathrsfs}
 \usepackage{pgfplots}
 \usepackage{mdframed}
+\usepackage{multirow}
 \usepackage[lined,boxruled]{algorithm2e}\usepackage{color}
 \usepackage[english]{babel}
 
