--- a/Report/07-conclusions.tex
+++ b/Report/07-conclusions.tex
@@ -1,1 +1,2 @@
 \chapter{Conclusions}
+The benefits of training ILP systems to play games using human level and above gameplay traces verses random are negligible.
