--- a/Report/03-logical-setting.tex
+++ b/Report/03-logical-setting.tex
@@ -1,4 +1,6 @@
-\chapter{Logical setting}\label{LogicalSetting}
+% \chapter{Logical setting}
+\chapter{\aco{Logical setting}{IGGP problem}}
+\label{LogicalSetting}
 
 The IGGP problem is defined in the 2019 paper Inductive General Game Playing \cite{Cropper/IGGP}. Much like the problem of ILP \ref{sec:ILP} the problem setting consists of examples about the truth or falsity of a formula $F$ and a hypothesis $H$ which covers $F$ if $H$ entails $F$. We assume the languages of:
 \begin{itemize}
